# velocf

./: LICENSE  Pipfile  README.md  pyproject.toml  setup.cfg
src/velocf/: __init__.py  __main__.py  cell.py  cli.py  corr.py  mdcar.py  xsf.py
