[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "velocf"
description = "Calculate velocity auto-correlation functions from SIESTA trajectories"
readme = {file="README.md", content-type="text/markdown"}
authors = [
    { name="Aaron Schankler", email="ams19@sas.upenn.edu" },
]
license = {text = "MIT License"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "mendeleev",
    "numpy",
    "scipy",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/aschankler/velocf"
Issues = "https://github.com/aschankler/velocf/issues"

[project.optional-dependencies]
NE = ["numexpr"]

[project.scripts]
velocf = "velocf.__main__:run"

[tool.setuptools.dynamic]
version = {attr = "velocf.__version__"}


[tool.black]
line-length = 88
target-version = ['py311']


[tool.mypy]
mypy_path = "src"

ignore_missing_imports = true
#disallow_untyped_defs = true
#check_untyped_defs = true

# Strict type checking
#disallow_untyped_calls = true
#warn_return_any = true
#strict_optional = true
#warn_no_return = true
warn_redundant_casts = true
warn_unused_ignores = true
#disallow_any_generics = true
warn_unreachable = true


[tool.pylint.messages_control]
max-line-length = 88
disable = [
    "line-too-long",
    "missing-docstring",
    "no-else-return",
]
