[metadata]
name = velocf
version = attr: velocf.__version__
description = Calculate velocity auto-correlation functions from SIESTA trajectories
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/aschankler/velocf
author = Aaron Schankler
author_email = ams19@sas.upenn.edu
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering :: Physics
project_urls =
    Bug Reports = https://github.com/aschankler/velocf/issues

[options]
packages = find:
install_requires =
    numpy
    scipy
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    velocf = velocf.__main__:run

[flake8]
max-line-length = 88
max-complexity = 10
select = C,E,F,W,B,B950
extend-ignore = E203,E501
